@@ -1,3 +1,8 @@
+2006-01-17  Peter Dennis Bartok  <pbartok@novell.com>
+
+	* LinkLabel.cs: We need to update the hover drawing when
+	  leaving the control as well.
+
 2006-01-18  Jordi Mas i Hernandez <jordimash@gmail.com>
 
 	* DataGrid.cs: Clicking on non empty areas in the columns
